# rag-document-processor

./: .env.cloudrun.example  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: rag-document-processor.mdc
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_job_llama_parse_tier.py  003_job_embedding_dimensions.py  004_job_ingest_embedding_controls.py  005_api_keys_drop_users.py
docs/: API_INTEGRATION.md  DEPLOY_CLOUD_RUN.md  DEPLOY_GCP.md  ONBOARDING.md
scripts/: cloudrun_celery_worker.sh  create_api_key.py  deploy.sh  docker-test-cloudrun-worker.ps1  setup-gcp-cloudrun.sh
src/rag_document_processor/: main.py
src/rag_document_processor/application/: dtos.py
src/rag_document_processor/application/ports/: blob_storage.py  embedding_pipeline.py  embedding_sink.py  ingestion_result_reader.py  password_hasher.py  repositories.py  task_queue.py  (+3 more)
src/rag_document_processor/core/: config.py  container.py  db_bootstrap.py  embedding_dimensions.py  ingest_embedding_options.py  logger.py  pipeline_factory.py
src/rag_document_processor/domain/: exceptions.py
src/rag_document_processor/presentation/: deps.py  exception_handlers.py
src/rag_document_processor/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/e2e/: test_health_remote.py
tests/integration/: test_redis_stream_sink.py
tests/unit/: test_embedding_dimensions.py  test_pipelines.py  test_redis_stream_result_reader.py  test_splitters.py
(+44 files in other folders)
